#54: clean up Gradle build script
Signed-off-by: Christopher Zhong <1946052+ChristopherZhong@users.noreply.github.com>